[gd_scene load_steps=16 format=3 uid="uid://d4e5yhqnajvhx"]

[ext_resource type="Script" path="res://scenes/sokoban_main.gd" id="1_bd2t2"]
[ext_resource type="Script" path="res://scenes/Warehouse Worker.gd" id="3_mnjmp"]
[ext_resource type="Texture2D" uid="uid://cbpyrxt85plkd" path="res://assets/player/player_05.png" id="4_0eihi"]
[ext_resource type="Texture2D" uid="uid://cdxc1ixu3f45y" path="res://assets/player/player_06.png" id="4_o4aot"]
[ext_resource type="Texture2D" uid="uid://bgpecn7q57v1i" path="res://assets/player/player_07.png" id="5_r3ujy"]
[ext_resource type="Texture2D" uid="uid://76s2vddnxisu" path="res://assets/player/player_20.png" id="6_lotvw"]
[ext_resource type="Texture2D" uid="uid://cice1p3w8heir" path="res://assets/player/player_21.png" id="7_e1r4a"]
[ext_resource type="Texture2D" uid="uid://c3xpxjn3qn51y" path="res://assets/player/player_22.png" id="8_ukljb"]
[ext_resource type="Texture2D" uid="uid://v5pgtj8np8ef" path="res://assets/player/player_17.png" id="9_4lyhd"]
[ext_resource type="Texture2D" uid="uid://b53kucx356iyn" path="res://assets/player/player_18.png" id="10_s4ohp"]
[ext_resource type="Texture2D" uid="uid://bb5177axp4guq" path="res://assets/player/player_19.png" id="11_ylrnt"]
[ext_resource type="Texture2D" uid="uid://5mxb7ptoapik" path="res://assets/player/player_08.png" id="12_e6ly2"]
[ext_resource type="Texture2D" uid="uid://bstvpgbhdfjgq" path="res://assets/player/player_09.png" id="13_nqwpk"]
[ext_resource type="Texture2D" uid="uid://bg0ks064o7ml4" path="res://assets/player/player_10.png" id="14_vcwvd"]

[sub_resource type="SpriteFrames" id="SpriteFrames_7o4uj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_0eihi")
}, {
"duration": 1.0,
"texture": ExtResource("4_o4aot")
}, {
"duration": 1.0,
"texture": ExtResource("5_r3ujy")
}],
"loop": true,
"name": &"move_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_lotvw")
}, {
"duration": 1.0,
"texture": ExtResource("7_e1r4a")
}, {
"duration": 1.0,
"texture": ExtResource("6_lotvw")
}, {
"duration": 1.0,
"texture": ExtResource("8_ukljb")
}],
"loop": true,
"name": &"move_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_4lyhd")
}, {
"duration": 1.0,
"texture": ExtResource("10_s4ohp")
}, {
"duration": 1.0,
"texture": ExtResource("9_4lyhd")
}, {
"duration": 1.0,
"texture": ExtResource("11_ylrnt")
}],
"loop": true,
"name": &"move_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_e6ly2")
}, {
"duration": 1.0,
"texture": ExtResource("13_nqwpk")
}, {
"duration": 1.0,
"texture": ExtResource("14_vcwvd")
}],
"loop": true,
"name": &"move_up",
"speed": 10.0
}]

[node name="SokobanMain" type="Node2D"]
script = ExtResource("1_bd2t2")

[node name="Warehouse Worker" type="Node2D" parent="."]
position = Vector2(96, 96)
script = ExtResource("3_mnjmp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Warehouse Worker"]
z_index = 1
sprite_frames = SubResource("SpriteFrames_7o4uj")
animation = &"move_down"

[node name="RayCast2D" type="RayCast2D" parent="Warehouse Worker"]
target_position = Vector2(0, 64)

[node name="UserInterface" type="CanvasLayer" parent="."]

[node name="ButtonContainer" type="HBoxContainer" parent="UserInterface"]
offset_left = 560.0
offset_right = 641.0
offset_bottom = 40.0

[node name="Restart" type="Button" parent="UserInterface/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "⟳"

[node name="Pause" type="Button" parent="UserInterface/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "☰"

[node name="PauseMenu" type="CanvasLayer" parent="."]

[node name="SwitchTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="pressed" from="UserInterface/ButtonContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="UserInterface/ButtonContainer/Pause" to="." method="_on_pause_pressed"]
[connection signal="timeout" from="SwitchTimer" to="." method="_on_switch_timer_timeout"]
